kubernetes/load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: johncheng-load-balancer
  namespace: johncheng-prod
  labels:
    app: johncheng-load-balancer
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
