kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: johncheng-ingress
  namespace: johncheng-prod
  labels:
    app: johncheng-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: johncheng-prod-ingress-address
    networking.gke.io/managed-certificates: johncheng-prod-certificate
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: johncheng-prod-https-redirect
spec:
  rules:
    - host: johncheng.me
      http:
        paths:
          - path: /*
            backend:
              serviceName: johncheng-load-balancer
              servicePort:  80
